@@ -2,9 +2,9 @@ Metadata-Version: 1.0
 Name: python-memcached
 Version: 1.31
 Summary: A Python memcached client library.
-Home-page: http://www.danga.com/memcached/
-Author: Evan Martin
-Author-email: martine@danga.com
-License: Python
+Home-page: http://www.tummy.com/Community/software/python-memcached/
+Author: Sean Reifschneider
+Author-email: jafo-memcached@tummy.com
+License: Python Software Foundation License
 Description: A Python memcached client library.
 Platform: UNKNOWN
