@@ -1,7 +1,8 @@
-This package was originally written by Evan Martin of Danga.
-Sean Reifschneider of tummy.com, ltd. has taken over maintenance of it.
-
 This software is a 100% Python interface to the memcached memory cache
 daemon.  It is the client side software which allows storing values in one
 or more, possibly remote, memcached servers.  Search google for memcached
 for more information.
+
+This package was originally written by Evan Martin of Danga.
+Please do not contact Evan about maintenance.
+Sean Reifschneider of tummy.com, ltd. has taken over maintenance of it.
